manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "8080"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /login

spec:
  selector:
    app: springboot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
