manifests/network-polcy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-springboot-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysl
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: springboot-app
    ports:
    - protocol: TCP
      port: 8080
